syntax = "proto3";

package icd.v1;

import "google/protobuf/empty.proto";

// The historical transport exposed a command wrapper with message and command
// identifiers. gRPC already correlates each request/response pair based on the
// RPC method and stream, so the explicit MessageId/CommandId fields are no
// longer required and have been omitted here.

service TalosOperatorService {
	rpc Handshake(HandshakeRequest) returns (HandshakeResponse);
	rpc PolarPanDiscrete(PolarPanDiscreteRequest) returns (PolarPanDiscreteResponse);
	rpc Home(HomeRequest) returns (HomeResponse);
	rpc PolarPanContinuousStart(PolarPanContinuousStartRequest) returns (PolarPanContinuousStartResponse);
	rpc PolarPanContinuousStop(google.protobuf.Empty) returns (PolarPanContinuousStopResponse);
	rpc CartesianMoveDiscrete(CartesianMoveDiscreteRequest) returns (CartesianMoveDiscreteResponse);
	rpc CartesianMoveContinuousStart(CartesianMoveContinuousStartRequest) returns (CartesianMoveContinuousStartResponse);
	rpc CartesianMoveContinuousStop(google.protobuf.Empty) returns (CartesianMoveContinuousStopResponse);
	rpc ExecuteHardwareOperation(ExecuteHardwareOperationRequest) returns (ExecuteHardwareOperationResponse);
	rpc GetSpeed(google.protobuf.Empty) returns (GetSpeedResponse);
	rpc SetSpeed(SetSpeedRequest) returns (SetSpeedResponse);
	rpc SavePosition(SavePositionRequest) returns (SavePositionResponse);
	rpc DeletePosition(DeletePositionRequest) returns (DeletePositionResponse);
	rpc GoToPosition(GoToPositionRequest) returns (GoToPositionResponse);
	rpc SetPolarPosition(SetPolarPositionRequest) returns (SetPolarPositionResponse);
	rpc GetPolarPosition(GetPolarPositionRequest) returns (GetPolarPositionResponse);
	rpc SetCartesianPosition(SetCartesianPositionRequest) returns (SetCartesianPositionResponse);
	rpc GetCartesianPosition(GetCartesianPositionRequest) returns (GetCartesianPositionResponse);
}

message CommandResult {
	// Matches the UINT16 return codes from the ICD; stored in a wider type to
	// follow protobuf scalar options.
	uint32 return_code = 1;
}

message HandshakeRequest {
	// Operator/Arm model connection identifier (UINT16 in the ICD).
	uint32 operator_id = 1;
}

message HandshakeResponse {
	CommandResult status = 1;
	uint32 major_version = 2;
	uint32 minor_version = 3;
}

message PolarPanDiscreteRequest {
	int32 delta_azimuth_tenths_deg = 1;
	int32 delta_altitude_tenths_deg = 2;
	uint32 delay_ms = 3;
	uint32 execution_time_ms = 4;
}

message HomeRequest {
	uint32 delay_ms = 1;
}

message PolarPanContinuousStartRequest {
	// Each axis indicator is constrained to -1, 0, or 1.
	int32 moving_azimuth = 1;
	int32 moving_altitude = 2;
}

message CartesianMoveDiscreteRequest {
	int32 delta_x_tenths_mm = 1;
	int32 delta_y_tenths_mm = 2;
	int32 delta_z_tenths_mm = 3;
	uint32 delay_ms = 4;
	uint32 execution_time_ms = 5;
}

message CartesianMoveContinuousStartRequest {
	// Each axis indicator is constrained to -1, 0, or 1.
	int32 moving_x = 1;
	int32 moving_y = 2;
	int32 moving_z = 3;
}

message ExecuteHardwareOperationRequest {
	uint32 subcommand_id = 1;
	bytes payload = 2;
}

message ExecuteHardwareOperationResponse {
	CommandResult status = 1;
	uint32 subcommand_id = 2;
	bytes payload = 3;
}

message GetSpeedResponse {
	CommandResult status = 1;
	uint32 speed = 2;
}

message SetSpeedRequest {
	uint32 speed = 1;
}

message SavePositionRequest {
	string name = 1;
	bool anchor = 2;
	// When empty, the parent reference is ignored just like the legacy ICD.
	string parent_reference = 3;
}

message DeletePositionRequest {
	string name = 1;
}

message GoToPositionRequest {
	string name = 1;
}

message SetPolarPositionRequest {
	string name = 1;
	int32 delta_tenths_deg = 2;
	int32 azimuth_tenths_deg = 3;
	int32 radius_tenths = 4;
}

message GetPolarPositionRequest {
	string name = 1;
}

message GetPolarPositionResponse {
	CommandResult status = 1;
	int32 delta_tenths_deg = 2;
	int32 azimuth_tenths_deg = 3;
	int32 radius_tenths = 4;
}

message SetCartesianPositionRequest {
	string name = 1;
	int32 x_tenths_mm = 2;
	int32 y_tenths_mm = 3;
	int32 z_tenths_mm = 4;
}

message GetCartesianPositionRequest {
	string name = 1;
}

message GetCartesianPositionResponse {
	CommandResult status = 1;
	int32 x_tenths_mm = 2;
	int32 y_tenths_mm = 3;
	int32 z_tenths_mm = 4;
}

message PolarPanDiscreteResponse {
	CommandResult status = 1;
}

message HomeResponse {
	CommandResult status = 1;
}

message PolarPanContinuousStartResponse {
	CommandResult status = 1;
}

message PolarPanContinuousStopResponse {
	CommandResult status = 1;
}

message CartesianMoveDiscreteResponse {
	CommandResult status = 1;
}

message CartesianMoveContinuousStartResponse {
	CommandResult status = 1;
}

message CartesianMoveContinuousStopResponse {
	CommandResult status = 1;
}

message SetSpeedResponse {
	CommandResult status = 1;
}

message SavePositionResponse {
	CommandResult status = 1;
}

message DeletePositionResponse {
	CommandResult status = 1;
}

message GoToPositionResponse {
	CommandResult status = 1;
}

message SetPolarPositionResponse {
	CommandResult status = 1;
}

message SetCartesianPositionResponse {
	CommandResult status = 1;
}